--- a/polling-software/css/app.css
+++ b/polling-software/css/app.css
@@ -1,17 +1,3 @@
-/* new class that hides the fill - transparent */
-.invisibleClass {
-  opacity: 0;
-}
-
-.activeClass {
-  opacity: 0;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-}
-
-.activeClass:hover {
-  opacity:0.6;
-}
 
 /* Create three equal columns that floats next to each other */
 .column {
@@ -27,14 +13,6 @@
   justify-content: center;
 }
 
-.selectedClass {
-  opacity: 0.9;
-}
-
-.correctClass {
-  opacity: 0.9;
-}
-
 .adx-button.primary {
   width:85%;
 }
@@ -47,20 +25,9 @@
    box-sizing: unset
 }
 
-
-
-
-/* NOTE: I would suggest changing up the styles ofthe questionChoices lists: Change the cursor for the draggable list items to something that looks more like a hand, or a move tool; ensure the list-style is none, etc. */
-
-
-#list{
-  list-style: none;
+.listQuestion {
+  margin: auto;
+  margin-bottom: .5em;
 }
 
-
-
-#list li{
-  margin: 10px;
-  cursor: pointer; 
-}
 
