Some user interface modifications

--- a/polling-software/css/app.css
+++ b/polling-software/css/app.css
@@ -17,6 +17,11 @@
   width:85%;
 }
 
+.adx-direction-inform {
+  max-width: 100% !important;
+  background-color: aqua;
+}
+
 .adx-button.primary:hover {
   font-weight: normal;
 }
@@ -29,5 +34,7 @@
   margin: auto;
   margin-bottom: .5em;
 }
+
+
 
 
