--- a/work-ethics-image-gallery/css/app.css
+++ b/work-ethics-image-gallery/css/app.css
@@ -127,3 +127,45 @@ img.hover-shadow {
 .mySlides img {
   max-width: 80%;
 }
+
+@media only screen and (max-width: 900px) {
+  .column {
+    height: 140px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .column {
+    height: 130px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .column {
+    height: 120px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .column {
+    height: 100px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .column {
+    height: 80px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .column {
+    height: 60px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .column {
+    height: 50px;
+  }
+}
